# pico-teleop

./: .gitignore  LICENSE  README.md  THIRD_PARTY.md  pyproject.toml
config/: sim_args.example.txt
docs/: LeRobot数据格式.md  PICO_Unity接入.md  ROS2接口.md  操作手册.md
pico_isaaclab/: __init__.py  camera_manager.py  joint_contract.py  lerobot_recorder.py  protocol.py  sim_app.py  teleop_controller.py  transports.py  validate_dataset.py
ros2_ws/src/pico_teleop_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/pico_teleop_bridge/config/: default.yaml
ros2_ws/src/pico_teleop_bridge/launch/: pico_teleop.launch.py
ros2_ws/src/pico_teleop_bridge/pico_teleop_bridge/: __init__.py  node.py
scripts/: check_environment.py  run_sim.py
tests/: test_joint_contract.py  test_lerobot_schema.py  test_protocol.py  test_teleop_controller.py  test_udp_transport.py
unity/Assets/Scripts/: PicoRosPublisher.cs
