[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pico-isaaclab-teleop"
version = "0.1.0"
description = "PICO ROS 2 teleoperation and LeRobot recording for BRX042501 in Isaac Lab"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = ["numpy>=1.24", "Pillow>=9"]

[tool.setuptools.packages.find]
include = ["pico_isaaclab*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
